--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.1.7",
+    "@react-native-firebase/app": "^12.8.0",
+    "@react-native-firebase/firestore": "^12.8.0",
+    "@react-native-firebase/storage": "^12.8.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-audio-recorder-player": "^3.2.0",
+    "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
+    "react-native-vector-icons": "^8.1.0",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
