--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.8",
     "@react-native-community/slider": "^4.1.7",
     "@react-native-firebase/app": "^12.8.0",
+    "@react-native-firebase/database": "^12.8.0",
     "@react-native-firebase/firestore": "^12.8.0",
     "@react-native-firebase/storage": "^12.8.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
@@ -22,6 +24,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^8.1.0",
     "rn-fetch-blob": "^0.12.0"
   },
