--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,6 +18,8 @@ target 'MobileProject' do
 
   pod 'react-native-html-to-pdf', :path => '../node_modules/react-native-html-to-pdf'
 
+  pod 'react-native-date-picker', :path => '../node_modules/react-native-date-picker'
+
   target 'MobileProjectTests' do
     inherit! :complete
     # Pods for testing
