--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-audio-recorder-player": "^3.2.0",
+    "react-native-date-picker": "^4.1.0",
     "react-native-elements": "^3.4.2",
     "react-native-html-to-pdf": "^0.10.0",
     "react-native-safe-area-context": "^3.3.2",
